# roboflow-engine

./: .gitmodules  CMakeLists.txt  MotionMatching.md  README.md  run.sh
assets/: .gitkeep
assets/G1_jy/: G1_bk.xml  G1_jy.urdf  head_link.STL  left_ankle_pitch_link.STL  left_elbow_link.STL  left_hand_index_0_link.STL  left_hand_middle_1_link.STL  left_hand_palm_link.STL  left_hand_thumb_1_link.STL  left_hand_thumb_2_link.STL  left_hip_pitch_link.STL  left_hip_roll_link.STL  left_hip_yaw_link.STL  left_knee_link.STL  left_rubber_hand.STL  left_shoulder_pitch_link.STL  left_shoulder_roll_link.STL  left_shoulder_yaw_link.STL  left_wrist_roll_link.STL  left_wrist_roll_rubber_hand.STL  left_wrist_yaw_link.STL  logo_link.STL  pelvis.STL  pelvis_contour_link.STL  right_ankle_pitch_link.STL  right_elbow_link.STL  right_hand_index_1_link.STL  right_hand_middle_0_link.STL  right_hand_palm_link.STL  right_hand_thumb_1_link.STL  right_hand_thumb_2_link.STL  right_hip_pitch_link.STL  right_hip_roll_link.STL  right_hip_yaw_link.STL  right_knee_link.STL  right_rubber_hand.STL  right_shoulder_pitch_link.STL  right_shoulder_roll_link.STL  right_shoulder_yaw_link.STL  right_wrist_roll_link.STL  (+14 more)
assets/motions/: dance1_subject1.motion  run1_subject2.npz  run1_subject5.npz  run2_subject1.npz  run2_subject4.npz  stand.motion  walk.motion  walk1_subject1.motion  (+9 more)
cmake/: FetchDependencies.cmake
gentle-humanoid/: README.md  requirements.txt  test_stream.py
scripts/: batch_convert_bvh.sh  bvh_to_npz.py  convert_gmr_to_motion.py  export_motion.py  generate_test_motion.py
src/: main.cpp
(+43 files in other folders)
